fixed layout issue

--- a/client/app/trucking-company/trucking-company.css
+++ b/client/app/trucking-company/trucking-company.css
@@ -19,3 +19,7 @@
 .form-inline-padding {
   padding: 3px;
 }
+
+.import-btn {
+  padding: 0;
+}
